Added destroy nodes to presets, just in case.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -244,6 +244,7 @@ permissions:
               sg.create.design: true
               sg.destroy.design: true
 #NOT IMPL.    sg.create.type.o: true
+#NOT IMPL.    sg.destroy.type.o: true
 #NOT IMPL.sg.preset.terminaluser:
 #NOT IMPL.  description: A permission set intended to be given to players who may wish to connect to an already-made terminal.
 #NOT IMPL.  children:
@@ -266,12 +267,21 @@ permissions:
               sg.create.type.u: true
               sg.create.type.i: true
 #NOT IMPL.    sg.create.type.v: true
+              sg.destroy.type.a: true
+              sg.destroy.type.b: true
+              sg.destroy.type.n: true
+              sg.destroy.type.s: true
+              sg.destroy.type.u: true
+              sg.destroy.type.i: true
+#NOT IMPL.    sg.destroy.type.v: true
           sg.preset.moderator:
             description: A set of permissions intended to be given to staff who will be moderating stargate usage amongst players.
             children:
               sg.preset.builder: true
               sg.create.type.f: true
               sg.create.type.r: true
+              sg.destroy.type.f: true
+              sg.destroy.type.r: true
               sg.destroy.network: true
               sg.create.network: true
               sg.admin.bypass: true
@@ -280,4 +290,5 @@ permissions:
             children:
               sg.preset.moderator: true
               sg.create: true
+              sg.destroy: true
               sg.admin: true
