--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.TheDgtl</groupId>
     <artifactId>Stargate</artifactId>
-    <version>0.11.0.5</version>
+    <version>1.0.0.1-SNAPSHOT</version>
     <name>StarGate</name>
     <description>Spigot plugin to create and manage networks of Stargates.</description>
 
